Implement JEI support. Shows all recipes and has recipe transfer handlers for 5/7 machines. Atomizer might not be possible because of how fluids work without adding a draining slot to the atomizer. Dissolver is just complicated and will be dealt with later.